crates/htmlarc-dom/src/dom/tests/snapshots/htmlarc_dom__dom__tests__remove_with_space@no_spaces_needed.html.snap
---
source: common/html/src/doc/tests/mod.rs
expression: "html.to_html(Format::Raw)"
input_file: common/html/src/doc/tests/html/prune/no_spaces_needed.html
---
<html>
<body>hi <br />there again</body>
</html>
