crates/htmlarc-dom/src/dom/tests/snapshots/htmlarc_dom__dom__tests__unwrap_with_space@many divs.html.snap
---
source: crates/html/src/dom/tests/mod.rs
expression: "html.to_html(HtmlFormat::Raw)"
input_file: crates/html/src/dom/tests/html/unwrap/many divs.html
snapshot_kind: text
---
<html><body>One Two Three Four Five Six</body></html>
